# mcp-fess

./: .gitignore  .pre-commit-config.yaml  AGENT_OPTIMIZATIONS.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  README.md  config.example.json  config.minimal.json  install.py  pyproject.toml
.github/workflows/: ci.yml
src/mcp_fess/: __init__.py  __main__.py  app.py  config.py  fess_client.py  logging_utils.py  server.py
src/mcp_fess/snippet_engine/: __init__.py  __main__.py  compose_parser.py  convert.py  docx_extract.py  image_store.py  manifest.py  md_writer.py  odt_extract.py  pdf_extract.py  scan.py  split.py  text_extract.py
tests/: conftest.py  test_acceptance.py  test_compose_parser.py  test_config.py  test_descriptor_improvements.py  test_fess_client.py  test_file_url_handling.py  test_image_transfer.py  test_index_only_content.py  test_init.py  test_integration_workflows.py  test_logging_utils.py  test_manifest.py  test_odt_extract.py  test_server.py  test_server_improvements.py  test_snippets.py  test_split.py
